--- a/lab9.Rmd
+++ b/lab9.Rmd
@@ -67,7 +67,6 @@ sort_vec(c(5,4,3,2,1), ascending = TRUE)
 
 # 3.Compare system.time
 ```{r}
-# preallocate the data with step 1 followed by step -1, thus it will be a vector with 0 & 1 cycles.
 N1 = 1000
 data_series1 = 0
 t1000_1 <- system.time({for (i in 2:N1){
@@ -75,31 +74,48 @@ t1000_1 <- system.time({for (i in 2:N1){
   }
 })
 
-t1000_2 <- system.time(as.vector(replicate(N1, c(0,1))))
+data_series2 = 0
+t1000_2 <- system.time({sample_1000 <- sample(c(-1,1),N1-1, replace = TRUE)
+                       for (i in 2:N1) {
+                         data_series2[i] = data_series2[i-1] + sample_1000[i-1]
+                       }
+})
 
 t1000_1
 t1000_2
 
 
 N2 = 10000
-data_series2 = 0
+data_series3 = 0
 t10000_1 <- system.time({for (i in 2:N2){
-  data_series2[i] = data_series2[i-1] + sample(c(-1, 1), 1)
+  data_series3[i] = data_series3[i-1] + sample(c(-1, 1), 1)
   }
 })
-t10000_2 <- system.time(as.vector(replicate(N2, c(0,1))))
+
+data_series4 = 0
+t10000_2 <- system.time({sample_10000 <- sample(c(-1,1),N2-1, replace = TRUE)
+                       for (i in 2:N2) {
+                         data_series4[i] = data_series4[i-1] + sample_10000[i-1]
+                       }
+})
 
 t10000_1
 t10000_2
 
 
 N3 = 1000000
-data_series3 = 0
+data_series5 = 0
 t1000000_1 <- system.time({for (i in 2:N3){
-  data_series3[i] = data_series3[i-1] + sample(c(-1, 1), 1)
+  data_series5[i] = data_series5[i-1] + sample(c(-1, 1), 1)
   }
 })
-t1000000_2 <- system.time(as.vector(replicate(N3, c(0,1))))
+
+data_series6 = 0
+t1000000_2 <- system.time({sample_1000000 <- sample(c(-1,1),N3-1, replace = TRUE)
+                       for (i in 2:N3) {
+                         data_series6[i] = data_series6[i-1] + sample_1000000[i-1]
+                       }
+})
 
 t1000000_1
 t1000000_2
